--- a/archives/toutiao-search/2023-10-04.md
+++ b/archives/toutiao-search/2023-10-04.md
@@ -1,58 +1,73 @@
 # 2023-10-04
 
-共 212 条
+共 223 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 04 2023 15:00:52 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 04 2023 16:00:55 GMT+0800 (China Standard Time) -->
 1. [男子4X100米反超日本的陈佳鹏是谁](https://so.toutiao.com/search?keyword=男子4X100米反超日本的陈佳鹏是谁)
 1. [全红婵完美一跳裁判全给10分](https://so.toutiao.com/search?keyword=全红婵完美一跳裁判全给10分)
 1. [“丰”景如画 满载希望](https://so.toutiao.com/search?keyword=“丰”景如画+满载希望)
 1. [美众议院投票罢免麦卡锡议长职务](https://so.toutiao.com/search?keyword=美众议院投票罢免麦卡锡议长职务)
 1. [山西7人窒息死亡初判系一氧化碳中毒](https://so.toutiao.com/search?keyword=山西7人窒息死亡初判系一氧化碳中毒)
 1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
-1. [乌克兰“拉黑”中国三大石油公司](https://so.toutiao.com/search?keyword=乌克兰“拉黑”中国三大石油公司)
-1. [夺冠后被围 全红婵“被迫营业”](https://so.toutiao.com/search?keyword=夺冠后被围+全红婵“被迫营业”)
+1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
 1. [山西发生意外窒息事件致7死](https://so.toutiao.com/search?keyword=山西发生意外窒息事件致7死)
-1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
+1. [迷笛音乐节大量财物被盗 失主发声](https://so.toutiao.com/search?keyword=迷笛音乐节大量财物被盗+失主发声)
+1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
 1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
 1. [成都辟谣养老机构老人深夜被打](https://so.toutiao.com/search?keyword=成都辟谣养老机构老人深夜被打)
-1. [举报高速违章1分钟赚3千？警方回应](https://so.toutiao.com/search?keyword=举报高速违章1分钟赚3千？警方回应)
-1. [恒大深圳公司1-8月交付超6000套](https://so.toutiao.com/search?keyword=恒大深圳公司1-8月交付超6000套)
-1. [美共和党罢免议长 民主党吃瓜看戏](https://so.toutiao.com/search?keyword=美共和党罢免议长+民主党吃瓜看戏)
-1. [全红婵将乌龟玩偶送给陈若琳](https://so.toutiao.com/search?keyword=全红婵将乌龟玩偶送给陈若琳)
-1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
-1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
-1. [全红婵“三字法宝”接受采访](https://so.toutiao.com/search?keyword=全红婵“三字法宝”接受采访)
-1. [迷笛音乐节大量财物被盗 失主发声](https://so.toutiao.com/search?keyword=迷笛音乐节大量财物被盗+失主发声)
-1. [美国乱局：当共和党人弹劾共和党人](https://so.toutiao.com/search?keyword=美国乱局：当共和党人弹劾共和党人)
-1. [旅游选热门景区还是小众景点](https://so.toutiao.com/search?keyword=旅游选热门景区还是小众景点)
 1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
-1. [佩洛西回应被驱逐：共和党不务正事](https://so.toutiao.com/search?keyword=佩洛西回应被驱逐：共和党不务正事)
-1. [两车轻微剐蹭致堵车 路过司机怒怼](https://so.toutiao.com/search?keyword=两车轻微剐蹭致堵车+路过司机怒怼)
-1. [多名游客爬泰山被消防抬下山](https://so.toutiao.com/search?keyword=多名游客爬泰山被消防抬下山)
-1. [邹凯说退役后还在寻找新目标](https://so.toutiao.com/search?keyword=邹凯说退役后还在寻找新目标)
-1. [张雨霏的巴黎奥运会目标](https://so.toutiao.com/search?keyword=张雨霏的巴黎奥运会目标)
-1. [意大利一客车坠桥已致21死](https://so.toutiao.com/search?keyword=意大利一客车坠桥已致21死)
-1. [羽毛球“梁王”组合无缘男双八强](https://so.toutiao.com/search?keyword=羽毛球“梁王”组合无缘男双八强)
-1. [杨紫埃菲尔铁塔下跳舞](https://so.toutiao.com/search?keyword=杨紫埃菲尔铁塔下跳舞)
+1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
 1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
+1. [全红婵将乌龟玩偶送给陈若琳](https://so.toutiao.com/search?keyword=全红婵将乌龟玩偶送给陈若琳)
+1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
+1. [“神仙打架”见证全红婵陈芋汐友谊](https://so.toutiao.com/search?keyword=“神仙打架”见证全红婵陈芋汐友谊)
+1. [杨紫埃菲尔铁塔下跳舞](https://so.toutiao.com/search?keyword=杨紫埃菲尔铁塔下跳舞)
+1. [恒大深圳公司1-8月交付超6000套](https://so.toutiao.com/search?keyword=恒大深圳公司1-8月交付超6000套)
+1. [中国女子新加坡谎称遭性侵被判监禁](https://so.toutiao.com/search?keyword=中国女子新加坡谎称遭性侵被判监禁)
+1. [旅游选热门景区还是小众景点](https://so.toutiao.com/search?keyword=旅游选热门景区还是小众景点)
+1. [举报高速违章1分钟赚3千？警方回应](https://so.toutiao.com/search?keyword=举报高速违章1分钟赚3千？警方回应)
+1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
+1. [“丸子头”葛曼棋终成当家女飞人](https://so.toutiao.com/search?keyword=“丸子头”葛曼棋终成当家女飞人)
+1. [邹凯说退役后还在寻找新目标](https://so.toutiao.com/search?keyword=邹凯说退役后还在寻找新目标)
+1. [泰国成立应急协调中心处理枪击事件](https://so.toutiao.com/search?keyword=泰国成立应急协调中心处理枪击事件)
+1. [每天多喝水是养肾还是伤肾](https://so.toutiao.com/search?keyword=每天多喝水是养肾还是伤肾)
+1. [台名嘴：大陆消费力复苏](https://so.toutiao.com/search?keyword=台名嘴：大陆消费力复苏)
+1. [意大利一客车坠桥已致21死](https://so.toutiao.com/search?keyword=意大利一客车坠桥已致21死)
+1. [马英九拒绝出席台当局“双十庆典”](https://so.toutiao.com/search?keyword=马英九拒绝出席台当局“双十庆典”)
+1. [动物学和鸟类生态学家郑光美去世](https://so.toutiao.com/search?keyword=动物学和鸟类生态学家郑光美去世)
+1. [两车轻微剐蹭致堵车 路过司机怒怼](https://so.toutiao.com/search?keyword=两车轻微剐蹭致堵车+路过司机怒怼)
+1. [越南地产商非法集资超30万亿越南盾](https://so.toutiao.com/search?keyword=越南地产商非法集资超30万亿越南盾)
+1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
+1. [黄晓明晒妈妈做的韭菜盒子](https://so.toutiao.com/search?keyword=黄晓明晒妈妈做的韭菜盒子)
+1. [外国人海底捞唱生日歌眼神亮了](https://so.toutiao.com/search?keyword=外国人海底捞唱生日歌眼神亮了)
+1. [全红婵“三字法宝”接受采访](https://so.toutiao.com/search?keyword=全红婵“三字法宝”接受采访)
+1. [铁骑交警护送国道突发疾病儿童就医](https://so.toutiao.com/search?keyword=铁骑交警护送国道突发疾病儿童就医)
+1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
+1. [2023年诺贝尔物理学奖揭晓](https://so.toutiao.com/search?keyword=2023年诺贝尔物理学奖揭晓)
+1. [佩洛西回应被驱逐：共和党不务正事](https://so.toutiao.com/search?keyword=佩洛西回应被驱逐：共和党不务正事)
+1. [俄称亚美尼亚批准罗马规约是个错误](https://so.toutiao.com/search?keyword=俄称亚美尼亚批准罗马规约是个错误)
+1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
+1. [这种场面该如何应对](https://so.toutiao.com/search?keyword=这种场面该如何应对)
+1. [4项税费政策10月起实施](https://so.toutiao.com/search?keyword=4项税费政策10月起实施)
+1. [男友家情况特殊女子0彩礼出嫁](https://so.toutiao.com/search?keyword=男友家情况特殊女子0彩礼出嫁)
+1. [泰山部分球迷场外大喊“泰山解散”](https://so.toutiao.com/search?keyword=泰山部分球迷场外大喊“泰山解散”)
+1. [马来西亚多地空气污染仍未缓解](https://so.toutiao.com/search?keyword=马来西亚多地空气污染仍未缓解)
+1. [美国乱局：当共和党人弹劾共和党人](https://so.toutiao.com/search?keyword=美国乱局：当共和党人弹劾共和党人)
+1. [乌克兰“拉黑”中国三大石油公司](https://so.toutiao.com/search?keyword=乌克兰“拉黑”中国三大石油公司)
+1. [夺冠后被围 全红婵“被迫营业”](https://so.toutiao.com/search?keyword=夺冠后被围+全红婵“被迫营业”)
+1. [美共和党罢免议长 民主党吃瓜看戏](https://so.toutiao.com/search?keyword=美共和党罢免议长+民主党吃瓜看戏)
+1. [多名游客爬泰山被消防抬下山](https://so.toutiao.com/search?keyword=多名游客爬泰山被消防抬下山)
+1. [张雨霏的巴黎奥运会目标](https://so.toutiao.com/search?keyword=张雨霏的巴黎奥运会目标)
+1. [羽毛球“梁王”组合无缘男双八强](https://so.toutiao.com/search?keyword=羽毛球“梁王”组合无缘男双八强)
 1. [2023上海超级杯观赛指南](https://so.toutiao.com/search?keyword=2023上海超级杯观赛指南)
 1. [中方回应美参院多数党领袖宣布访华](https://so.toutiao.com/search?keyword=中方回应美参院多数党领袖宣布访华)
-1. [马英九拒绝出席台当局“双十庆典”](https://so.toutiao.com/search?keyword=马英九拒绝出席台当局“双十庆典”)
-1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
-1. [“丸子头”葛曼棋终成当家女飞人](https://so.toutiao.com/search?keyword=“丸子头”葛曼棋终成当家女飞人)
 1. [美国认为乌方还剩六到八周反攻时间](https://so.toutiao.com/search?keyword=美国认为乌方还剩六到八周反攻时间)
 1. [美国对乌克兰安全援助计划暂停](https://so.toutiao.com/search?keyword=美国对乌克兰安全援助计划暂停)
-1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
 1. [女子举报100多台车走应急道引争议](https://so.toutiao.com/search?keyword=女子举报100多台车走应急道引争议)
-1. [黄晓明晒妈妈做的韭菜盒子](https://so.toutiao.com/search?keyword=黄晓明晒妈妈做的韭菜盒子)
-1. [泰山部分球迷场外大喊“泰山解散”](https://so.toutiao.com/search?keyword=泰山部分球迷场外大喊“泰山解散”)
 1. [专家：麦卡锡被罢免对白宫不算好事](https://so.toutiao.com/search?keyword=专家：麦卡锡被罢免对白宫不算好事)
 1. [媒体：收贪官父亲钱的女儿有没有罪](https://so.toutiao.com/search?keyword=媒体：收贪官父亲钱的女儿有没有罪)
 1. [拜登与多国领导人通话重申对乌支持](https://so.toutiao.com/search?keyword=拜登与多国领导人通话重申对乌支持)
-1. [中国女子新加坡谎称遭性侵被判监禁](https://so.toutiao.com/search?keyword=中国女子新加坡谎称遭性侵被判监禁)
-1. [2023年诺贝尔物理学奖揭晓](https://so.toutiao.com/search?keyword=2023年诺贝尔物理学奖揭晓)
-1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
 1. [台风“小犬”将趋向广东东部近海](https://so.toutiao.com/search?keyword=台风“小犬”将趋向广东东部近海)
 1. [驻泰使馆：受害中国公民身份已查明](https://so.toutiao.com/search?keyword=驻泰使馆：受害中国公民身份已查明)
 1. [中国女足3-4不敌日本无缘决赛](https://so.toutiao.com/search?keyword=中国女足3-4不敌日本无缘决赛)
@@ -66,7 +81,6 @@
 1. [杭州亚运18个球类项目哪个速度最快](https://so.toutiao.com/search?keyword=杭州亚运18个球类项目哪个速度最快)
 1. [德国多地示威抗议北约拱火俄乌冲突](https://so.toutiao.com/search?keyword=德国多地示威抗议北约拱火俄乌冲突)
 1. [曼谷枪击案亲历者：与亲友厕所遇袭](https://so.toutiao.com/search?keyword=曼谷枪击案亲历者：与亲友厕所遇袭)
-1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
 1. [男子龙舟200米中国队夺冠](https://so.toutiao.com/search?keyword=男子龙舟200米中国队夺冠)
 1. [假期返程注意添衣保暖](https://so.toutiao.com/search?keyword=假期返程注意添衣保暖)
 1. [双节假期加班费‍该怎么算](https://so.toutiao.com/search?keyword=双节假期加班费‍该怎么算)
@@ -74,7 +88,6 @@
 1. [中国游客回忆曼谷枪击案惊魂现场](https://so.toutiao.com/search?keyword=中国游客回忆曼谷枪击案惊魂现场)
 1. [7岁女孩独自进地铁站 辅警发现异常](https://so.toutiao.com/search?keyword=7岁女孩独自进地铁站+辅警发现异常)
 1. [滕哈赫：这赛季与上赛季比有差距](https://so.toutiao.com/search?keyword=滕哈赫：这赛季与上赛季比有差距)
-1. [马来西亚多地空气污染仍未缓解](https://so.toutiao.com/search?keyword=马来西亚多地空气污染仍未缓解)
 1. [2024年不宜结婚是真的吗](https://so.toutiao.com/search?keyword=2024年不宜结婚是真的吗)
 1. [泰国北大年府发生炸弹爆炸致13伤](https://so.toutiao.com/search?keyword=泰国北大年府发生炸弹爆炸致13伤)
 1. [麦卡锡称将不再竞选连任众议长](https://so.toutiao.com/search?keyword=麦卡锡称将不再竞选连任众议长)
@@ -89,7 +102,6 @@
 1. [拜登敦促众议院迅速选出一位新议长](https://so.toutiao.com/search?keyword=拜登敦促众议院迅速选出一位新议长)
 1. [水庆霞球员时期曾两次前往日本踢球](https://so.toutiao.com/search?keyword=水庆霞球员时期曾两次前往日本踢球)
 1. [奥纳纳低级出球失误坑队友](https://so.toutiao.com/search?keyword=奥纳纳低级出球失误坑队友)
-1. [男友家情况特殊女子0彩礼出嫁](https://so.toutiao.com/search?keyword=男友家情况特殊女子0彩礼出嫁)
 1. [新郎结婚时被锁上铁链 目击者发声](https://so.toutiao.com/search?keyword=新郎结婚时被锁上铁链+目击者发声)
 1. [泰山客战仁川联或决定小组出线形势](https://so.toutiao.com/search?keyword=泰山客战仁川联或决定小组出线形势)
 1. [安徽一辆商务车追尾拖拉机致3死](https://so.toutiao.com/search?keyword=安徽一辆商务车追尾拖拉机致3死)
@@ -191,7 +203,6 @@
 1. [日本当局谴责日参议员铃木宗男访俄](https://so.toutiao.com/search?keyword=日本当局谴责日参议员铃木宗男访俄)
 1. [俄称暂停部署中导的理由“在消失”](https://so.toutiao.com/search?keyword=俄称暂停部署中导的理由“在消失”)
 1. [土耳其政府拘留20名涉恐嫌疑人](https://so.toutiao.com/search?keyword=土耳其政府拘留20名涉恐嫌疑人)
-1. [台名嘴：大陆消费力复苏](https://so.toutiao.com/search?keyword=台名嘴：大陆消费力复苏)
 1. [张雨霏两个月拿下20枚奖牌](https://so.toutiao.com/search?keyword=张雨霏两个月拿下20枚奖牌)
 1. [泽连斯基与西班牙桑切斯首相通话](https://so.toutiao.com/search?keyword=泽连斯基与西班牙桑切斯首相通话)
 1. [泽连斯基与意大利外长举行会谈](https://so.toutiao.com/search?keyword=泽连斯基与意大利外长举行会谈)
