--- a/archives/toutiao-search/2023-10-04.md
+++ b/archives/toutiao-search/2023-10-04.md
@@ -1,67 +1,84 @@
 # 2023-10-04
 
-共 275 条
+共 291 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 04 2023 19:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 04 2023 20:09:21 GMT+0800 (China Standard Time) -->
 1. [男子4X100米反超日本的陈佳鹏是谁](https://so.toutiao.com/search?keyword=男子4X100米反超日本的陈佳鹏是谁)
-1. [中国游客回忆曼谷枪击案惊魂现场](https://so.toutiao.com/search?keyword=中国游客回忆曼谷枪击案惊魂现场)
+1. [麦卡锡成美国首位遭罢免众院议长](https://so.toutiao.com/search?keyword=麦卡锡成美国首位遭罢免众院议长)
 1. [“一带一路”上的“中国造”](https://so.toutiao.com/search?keyword=“一带一路”上的“中国造”)
-1. [记者“哄娃式”采访全红婵](https://so.toutiao.com/search?keyword=记者“哄娃式”采访全红婵)
-1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
-1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
-1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
-1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
-1. [官方辟谣举报高速违章1分钟赚3千](https://so.toutiao.com/search?keyword=官方辟谣举报高速违章1分钟赚3千)
-1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
-1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
-1. [诺奖奖金为何越发越多](https://so.toutiao.com/search?keyword=诺奖奖金为何越发越多)
+1. [中国男子百米接力完成传承](https://so.toutiao.com/search?keyword=中国男子百米接力完成传承)
 1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
+1. [中国男篮vs菲律宾冲击亚运决赛](https://so.toutiao.com/search?keyword=中国男篮vs菲律宾冲击亚运决赛)
+1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
+1. [记者“哄娃式”采访全红婵](https://so.toutiao.com/search?keyword=记者“哄娃式”采访全红婵)
+1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
 1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
-1. [美国纽约一男子在女友眼前被捅死](https://so.toutiao.com/search?keyword=美国纽约一男子在女友眼前被捅死)
-1. [杨紫埃菲尔铁塔下跳舞](https://so.toutiao.com/search?keyword=杨紫埃菲尔铁塔下跳舞)
+1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
+1. [官方辟谣举报高速违章1分钟赚3千](https://so.toutiao.com/search?keyword=官方辟谣举报高速违章1分钟赚3千)
 1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
+1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
+1. [美国纽约一男子在女友眼前被捅死](https://so.toutiao.com/search?keyword=美国纽约一男子在女友眼前被捅死)
+1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
+1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
+1. [游客自驾冲进羊群致30多只羊死伤](https://so.toutiao.com/search?keyword=游客自驾冲进羊群致30多只羊死伤)
+1. [杨紫埃菲尔铁塔下跳舞](https://so.toutiao.com/search?keyword=杨紫埃菲尔铁塔下跳舞)
+1. [中国台北健儿：观众席全是自己人 ](https://so.toutiao.com/search?keyword=中国台北健儿：观众席全是自己人 )
+1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
+1. [诺奖奖金为何越发越多](https://so.toutiao.com/search?keyword=诺奖奖金为何越发越多)
+1. [韩星华莎被告表演公然猥亵罪不成立](https://so.toutiao.com/search?keyword=韩星华莎被告表演公然猥亵罪不成立)
 1. [西工大仿生飞行器刷新世界纪录](https://so.toutiao.com/search?keyword=西工大仿生飞行器刷新世界纪录)
+1. [1分钟看懂诺贝尔物理奖](https://so.toutiao.com/search?keyword=1分钟看懂诺贝尔物理奖)
+1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
+1. [农业农村部部署台风小犬防御工作](https://so.toutiao.com/search?keyword=农业农村部部署台风小犬防御工作)
+1. [诺奖获得者为何还是副教授](https://so.toutiao.com/search?keyword=诺奖获得者为何还是副教授)
+1. [男子问饭店内顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店内顾客好吃吗+回答亮了)
+1. [受台风影响两航线明日起全天候停航](https://so.toutiao.com/search?keyword=受台风影响两航线明日起全天候停航)
+1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
+1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
+1. [特警碰掉游客小吃重新买了一份](https://so.toutiao.com/search?keyword=特警碰掉游客小吃重新买了一份)
+1. [带你游广西百魔洞](https://so.toutiao.com/search?keyword=带你游广西百魔洞)
+1. [亚运1亿数字火炬手创造新世界纪录](https://so.toutiao.com/search?keyword=亚运1亿数字火炬手创造新世界纪录)
+1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
+1. [新人租公交当婚车 氛围感拉满](https://so.toutiao.com/search?keyword=新人租公交当婚车+氛围感拉满)
+1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
+1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
+1. [未来3天这些地方局地有暴雪大暴雪](https://so.toutiao.com/search?keyword=未来3天这些地方局地有暴雪大暴雪)
+1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
+1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
+1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
+1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
+1. [全红婵说单人赛感觉旁边少了个人](https://so.toutiao.com/search?keyword=全红婵说单人赛感觉旁边少了个人)
+1. [餐厅收取餐具费合理吗](https://so.toutiao.com/search?keyword=餐厅收取餐具费合理吗)
+1. [通用和福特拟在美国再裁员500人](https://so.toutiao.com/search?keyword=通用和福特拟在美国再裁员500人)
+1. [撒贝宁带老婆回沈阳婆家](https://so.toutiao.com/search?keyword=撒贝宁带老婆回沈阳婆家)
+1. [广州今日起迎返程高峰](https://so.toutiao.com/search?keyword=广州今日起迎返程高峰)
+1. [拜登讲话时“突然僵住”](https://so.toutiao.com/search?keyword=拜登讲话时“突然僵住”)
+1. [中国游客回忆曼谷枪击案惊魂现场](https://so.toutiao.com/search?keyword=中国游客回忆曼谷枪击案惊魂现场)
+1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
 1. [文旅局回应内蒙古一景区游客喊退票](https://so.toutiao.com/search?keyword=文旅局回应内蒙古一景区游客喊退票)
 1. [男子问饭店顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店顾客好吃吗+回答亮了)
-1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
 1. [官媒：麦卡锡从胜选到被免都是闹剧](https://so.toutiao.com/search?keyword=官媒：麦卡锡从胜选到被免都是闹剧)
-1. [诺奖获得者为何还是副教授](https://so.toutiao.com/search?keyword=诺奖获得者为何还是副教授)
 1. [女子摇晃水上项目扶绳让别人掉水里](https://so.toutiao.com/search?keyword=女子摇晃水上项目扶绳让别人掉水里)
-1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
-1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
-1. [特警碰掉游客小吃重新买了一份](https://so.toutiao.com/search?keyword=特警碰掉游客小吃重新买了一份)
-1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
-1. [拜登讲话时“突然僵住”](https://so.toutiao.com/search?keyword=拜登讲话时“突然僵住”)
-1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
 1. [男子带英国籍妻子办中式婚礼](https://so.toutiao.com/search?keyword=男子带英国籍妻子办中式婚礼)
-1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
 1. [假期第六天哪些路段车流量大](https://so.toutiao.com/search?keyword=假期第六天哪些路段车流量大)
-1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
-1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
 1. [日本5日上午开始第二轮核污水排放](https://so.toutiao.com/search?keyword=日本5日上午开始第二轮核污水排放)
 1. [男子查出脂肪肝没重视两年后成肝癌](https://so.toutiao.com/search?keyword=男子查出脂肪肝没重视两年后成肝癌)
-1. [受台风影响两航线明日起全天候停航](https://so.toutiao.com/search?keyword=受台风影响两航线明日起全天候停航)
-1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
 1. [特朗普发文怒斥共和党内斗行为](https://so.toutiao.com/search?keyword=特朗普发文怒斥共和党内斗行为)
 1. [《莫斯科行动》票房破3亿元](https://so.toutiao.com/search?keyword=《莫斯科行动》票房破3亿元)
 1. [欧盟公布“敏感清单”被指针对中俄](https://so.toutiao.com/search?keyword=欧盟公布“敏感清单”被指针对中俄)
 1. [湖南高速将迎返程车流](https://so.toutiao.com/search?keyword=湖南高速将迎返程车流)
 1. [我国发布首张超深水三维地质勘探图](https://so.toutiao.com/search?keyword=我国发布首张超深水三维地质勘探图)
 1. [运动员媒体人对亚运会的表白太甜了](https://so.toutiao.com/search?keyword=运动员媒体人对亚运会的表白太甜了)
-1. [撒贝宁带老婆回沈阳婆家](https://so.toutiao.com/search?keyword=撒贝宁带老婆回沈阳婆家)
 1. [记者实探黄金卖场：金价跌幅明显](https://so.toutiao.com/search?keyword=记者实探黄金卖场：金价跌幅明显)
 1. [假期在天安门广场吃饭要花多少钱](https://so.toutiao.com/search?keyword=假期在天安门广场吃饭要花多少钱)
 1. [交警回应街头上演“追击式”碰瓷](https://so.toutiao.com/search?keyword=交警回应街头上演“追击式”碰瓷)
-1. [通用和福特拟在美国再裁员500人](https://so.toutiao.com/search?keyword=通用和福特拟在美国再裁员500人)
 1. [全红婵完美一跳裁判全给10分](https://so.toutiao.com/search?keyword=全红婵完美一跳裁判全给10分)
-1. [麦卡锡成美国首位遭罢免众院议长](https://so.toutiao.com/search?keyword=麦卡锡成美国首位遭罢免众院议长)
 1. [台风小犬可能7日掠过或登陆广东](https://so.toutiao.com/search?keyword=台风小犬可能7日掠过或登陆广东)
 1. [赣闽往北上广深方向列车余票紧张](https://so.toutiao.com/search?keyword=赣闽往北上广深方向列车余票紧张)
 1. [俄将决定是扩大石油减产还是增产](https://so.toutiao.com/search?keyword=俄将决定是扩大石油减产还是增产)
 1. [无缘羽毛球男双八强 王昶发文道歉](https://so.toutiao.com/search?keyword=无缘羽毛球男双八强+王昶发文道歉)
 1. [提议罢免美众议长的人或将被边缘化](https://so.toutiao.com/search?keyword=提议罢免美众议长的人或将被边缘化)
-1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
 1. [伊朗公布军演期间监视美军舰画面](https://so.toutiao.com/search?keyword=伊朗公布军演期间监视美军舰画面)
 1. [乌克兰央行将上调今年GDP预测](https://so.toutiao.com/search?keyword=乌克兰央行将上调今年GDP预测)
 1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
@@ -71,7 +88,6 @@
 1. [媒体：美国众议长遭罢免再创历史](https://so.toutiao.com/search?keyword=媒体：美国众议长遭罢免再创历史)
 1. [外国人海底捞唱生日歌眼神亮了](https://so.toutiao.com/search?keyword=外国人海底捞唱生日歌眼神亮了)
 1. [欧盟候选国领导人不满乌“抄近道”](https://so.toutiao.com/search?keyword=欧盟候选国领导人不满乌“抄近道”)
-1. [未来3天这些地方局地有暴雪大暴雪](https://so.toutiao.com/search?keyword=未来3天这些地方局地有暴雪大暴雪)
 1. [男生见女朋友家长紧张到手足无措](https://so.toutiao.com/search?keyword=男生见女朋友家长紧张到手足无措)
 1. [国庆档电影票房究竟被什么影响了](https://so.toutiao.com/search?keyword=国庆档电影票房究竟被什么影响了)
 1. [各地返程高速路况：车队堵成长龙](https://so.toutiao.com/search?keyword=各地返程高速路况：车队堵成长龙)
